--- a/source/scss/estilos.scss
+++ b/source/scss/estilos.scss
@@ -2,4 +2,6 @@
 $font-family-sans-serif:  'Raleway',-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 @import './node_modules/bootstrap/scss/bootstrap';
+@import './node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import './node_modules/@fortawesome/fontawesome-free/scss/solid';
 
